Improve openapi validation.
Issue #909
