# atramhasis/views/exception_views.py
@@ -23,57 +23,57 @@ from atramhasis.protected_resources import ProtectedResourceException
 log = logging.getLogger(__name__)
 
 
-@notfound_view_config(renderer='json')
+@notfound_view_config(renderer="json")
 def failed_not_found(exc, request):
     """
     View invoked when a resource could not be found.
     """
     log.debug(exc.explanation)
     request.response.status_int = 404
-    return {'message': exc.explanation}
+    return {"message": exc.explanation}
 
 
-@view_config(context=SkosRegistryNotFoundException, renderer='json')
+@view_config(context=SkosRegistryNotFoundException, renderer="json")
 def failed_skos(exc, request):
     """
     View invoked when Atramhasis can't find a SKOS registry.
     """
     log.error(exc.value, exc_info=sys.exc_info())
     request.response.status_int = 500
-    return {'message': exc.value}
+    return {"message": exc.value}
 
 
-@view_config(context=ValidationError, renderer='json')
+@view_config(context=ValidationError, renderer="json")
 def failed_validation(exc, request):
     """
     View invoked when bad data was submitted to Atramhasis.
     """
     log.debug(f"'message': {exc.value}, 'errors': {exc.errors}")
     request.response.status_int = 400
-    return {'message': exc.value, 'errors': exc.errors}
+    return {"message": exc.value, "errors": exc.errors}
 
 
-@view_config(context=ProtectedResourceException, renderer='json')
+@view_config(context=ProtectedResourceException, renderer="json")
 def protected(exc, request):
     """
     when a protected operation is called on a resource that is still referenced
     """
     log.warning(f"'message': {exc.value}, 'referenced_in': {exc.referenced_in}")
     request.response.status_int = 409
-    return {'message': exc.value, 'referenced_in': exc.referenced_in}
+    return {"message": exc.value, "referenced_in": exc.referenced_in}
 
 
-@view_config(context=ProviderUnavailableException, renderer='json')
+@view_config(context=ProviderUnavailableException, renderer="json")
 def provider_unavailable(exc, request):
     """
     View invoked when ProviderUnavailableException was raised.
     """
     log.error(exc, exc_info=sys.exc_info())
     request.response.status_int = 503
-    return {'message': exc.message}
+    return {"message": exc.message}
 
 
-@view_config(context=IntegrityError, renderer='json')
+@view_config(context=IntegrityError, renderer="json")
 def data_integrity(exc, request):
     """
     View invoked when IntegrityError was raised.
@@ -81,28 +81,28 @@ def data_integrity(exc, request):
     log.warning(exc)
     request.response.status_int = 409
     return {
-        'message': 'this operation violates the data integrity and could not be executed'
+        "message": "this operation violates the data integrity and could not be executed"
     }
 
 
-@view_config(context=Exception, renderer='json')
+@view_config(context=Exception, renderer="json")
 def failed(exc, request):  # pragma no cover
     """
     View invoked when bad data was submitted to Atramhasis.
     """
     log.error(exc, exc_info=sys.exc_info())
     request.response.status_int = 500
-    return {'message': 'unexpected server error'}
+    return {"message": "unexpected server error"}
 
 
-@view_config(context=HTTPMethodNotAllowed, renderer='json')
+@view_config(context=HTTPMethodNotAllowed, renderer="json")
 def failed_not_method_not_allowed(exc, request):
     """
     View invoked when a method is not allowed.
     """
     log.debug(exc.explanation)
     request.response.status_int = 405
-    return {'message': exc.explanation}
+    return {"message": exc.explanation}
 
 
 @view_config(context=RequestValidationError, renderer="json")
@@ -119,12 +119,12 @@ def failed_openapi_validation(exc, request):
         errors.extend(
             [
                 f'{error.get("field")}: {error.get("message")}'
-                for error in
-                list(extract_errors(request, exc.errors))
+                for error in list(extract_errors(request, exc.errors))
             ]
         )
         request.response.status_int = 400
-        return {"message": "Request was not valid for schema.", "errors": errors}
+        source = "Request" if isinstance(exc, RequestValidationError) else "Response"
+        return {"message": f"{source} was not valid for schema.", "errors": errors}
     except Exception:
         log.exception("Issue with exception handling.")
         return openapi_validation_error(exc, request)
